src/components/ImageCarousel/ImageCarousel.scss
@import '../../variables.scss';

.image-carousel {
    .large-center-text {
        color: $White;
        text-align: right;
        font-size: 5rem;
        font-family: $font-heading;
        margin: 0rem 3rem;
    }

    .image-and-overlay {
        margin: 0rem 3rem;

        img {
            width: 100%;
            user-select: none;
            border: 1px solid $White;
        }

        .overlay-text {
            background-color: $White;
            position: absolute;
            bottom: 0.25rem;
            left: 0;
            width: 45%;
            height: 6rem;
            padding: 0.5rem;
            opacity: 50%;
            overflow: scroll;

            p {
                color: $Black;
                font-family: $font-body;
                opacity: 100%;
            }
        }
    }

    @media screen and (max-width: 1300px) {
        .overlay-text {
            width: 100% !important;
            height: 4.5rem !important;
        }

    }

    @media screen and (max-width: 768px) {
        .large-center-text {
            font-size: 3rem !important;
            margin-bottom: -3rem !important;
        }

        .image-and-overlay {
            margin: 3rem;

            img {
                width: 100%;
                user-select: none;
            }

            .overlay-text {
                background-color: $EerieBlack !important;
                position: relative !important;
                width: 100% !important;
                padding: 1rem 0rem !important;
                overflow: visible !important;
                margin-bottom: 5rem !important;

                p {
                    color: $DarkWhite !important;
                }
            }
        }
    }
}

